--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_account_transactions.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_account_transactions.xml
@@ -26,7 +26,8 @@
                 android:layout_weight="4"
                 android:text="@string/account_list_remain"
                 android:textColor="@android:color/black"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
 
             <TextView
                 android:id="@+id/tvAccountRemain"
@@ -35,7 +36,8 @@
                 android:layout_weight="6"
                 android:gravity="right"
                 android:textColor="@android:color/black"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
         </LinearLayout>
 
         <View
@@ -68,7 +70,8 @@
                 android:layout_weight="4"
                 android:text="@string/account_list_init_balance"
                 android:textColor="@android:color/black"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/tvAccountInitBalance"
@@ -77,7 +80,8 @@
                 android:layout_weight="6"
                 android:gravity="right"
                 android:textColor="@android:color/black"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
