--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_account_transaction.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_account_transaction.xml
@@ -30,8 +30,8 @@
                 android:singleLine="true"
                 android:text="Expense || Income: Category Name"
                 android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
 
             <TextView
                 android:id="@+id/tvDescription"
@@ -41,8 +41,8 @@
                 android:singleLine="true"
                 android:text="Description"
                 android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
 
             <TextView
                 android:id="@+id/tvDate"
@@ -52,7 +52,7 @@
                 android:clickable="false"
                 android:text="03/02/2016"
                 android:textColor="@color/textcolor_listview_account"
-                android:textSize="16sp"/>
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
         </LinearLayout>
 
 
@@ -72,8 +72,8 @@
                 android:gravity="center_vertical|right"
                 android:text="1,000,000 ₫"
                 android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
 
 
             <TextView
@@ -84,7 +84,7 @@
                 android:gravity="center_vertical|right"
                 android:text="Còn lại: 3,000,000 ₫"
                 android:textColor="@color/textcolor_listview_account"
-                android:textSize="16sp"/>
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
 
         </LinearLayout>
     </LinearLayout>
