--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_budget_transaction_detail.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_budget_transaction_detail.xml
@@ -21,7 +21,8 @@
             android:layout_weight="3"
             android:text="Expense: ..."
             android:textColor="@android:color/black"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
 
         <TextView
             android:id="@+id/tvAmount"
@@ -31,7 +32,8 @@
             android:gravity="right|center_vertical"
             android:text="... ₫"
             android:textColor="@android:color/black"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
 
     </LinearLayout>
 
@@ -50,7 +52,8 @@
             android:singleLine="true"
             android:text="Description"
             android:textColor="@android:color/black"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
 
     </LinearLayout>
 
@@ -67,7 +70,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="07/03/2016"
-            android:textColor="@color/textcolor_listview_account"/>
+            android:textColor="@color/textcolor_listview_account"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -80,7 +84,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="..."
-            android:textColor="@color/textcolor_listview_account"/>
+            android:textColor="@color/textcolor_listview_account"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
 
         <ImageView
             android:id="@+id/ivAccountIcon"
