--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_list_account.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_list_account.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <ListView
-        android:id="@+id/lvAccount"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:cacheColorHint="@android:color/transparent"
@@ -17,12 +17,11 @@
         android:dividerHeight="0.2dp"
         android:scrollbars="none"/>
 
-    <!-- Here is the view to show if the list is emtpy -->
     <TextView
-        android:id="@+id/tvEmpty"
+        android:id="@android:id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="No items."
+        android:text="@string/ListView_Account_Empty"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 </FrameLayout>
