--- a/WalletAnalyzing/app/src/main/res/layout/action_bar_with_button_add.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/action_bar_with_button_add.xml
@@ -35,13 +35,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="right|center_vertical"
-            android:orientation="horizontal">
-
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <ImageView
                 android:id="@+id/ivAdd"
