--- a/WalletAnalyzing/app/src/main/res/layout/layout_toast_successful.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_toast_successful.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:text="Error"
+        android:text="Message"
         android:textColor="@android:color/white"
         android:background="@android:color/transparent"/>
 
