--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_account_transaction.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_account_transaction.xml
@@ -28,10 +28,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:text="Expense || Income: Category Name"
+                android:text="Expense: Category Name"
                 android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:textAppearance="?android:attr/textAppearanceMedium"/>
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/tvDescription"
@@ -41,8 +40,7 @@
                 android:singleLine="true"
                 android:text="Description"
                 android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:textAppearance="?android:attr/textAppearanceMedium"/>
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/tvDate"
@@ -51,8 +49,7 @@
                 android:layout_marginTop="5dp"
                 android:clickable="false"
                 android:text="03/02/2016"
-                android:textColor="@color/textcolor_listview_account"
-                android:textAppearance="?android:attr/textAppearanceMedium"/>
+                android:textColor="@color/textcolor_listview_account"/>
         </LinearLayout>
 
 
@@ -72,8 +69,7 @@
                 android:gravity="center_vertical|right"
                 android:text="1,000,000 ₫"
                 android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:textAppearance="?android:attr/textAppearanceMedium"/>
+                android:textStyle="bold"/>
 
 
             <TextView
@@ -83,8 +79,7 @@
                 android:layout_weight="1"
                 android:gravity="center_vertical|right"
                 android:text="Còn lại: 3,000,000 ₫"
-                android:textColor="@color/textcolor_listview_account"
-                android:textAppearance="?android:attr/textAppearanceMedium"/>
+                android:textColor="@color/textcolor_listview_account"/>
 
         </LinearLayout>
     </LinearLayout>
