--- a/WalletAnalyzing/app/src/main/res/layout/layout_dtmf.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_dtmf.xml
@@ -1,274 +1,272 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@android:color/transparent"
-              android:gravity="center"
-              android:orientation="vertical"
-              android:weightSum="5">
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:background="@android:color/transparent"
+	android:gravity="center_horizontal|bottom"
+	android:orientation="vertical">
 
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:weightSum="2">
+	<LinearLayout
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:gravity="center"
+		android:orientation="vertical"
+		android:weightSum="2">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Enter Passcode"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/passcode_text_size"
-            android:textStyle="bold"/>
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:text="Enter Passcode"
+			android:textColor="@android:color/white"
+			android:textSize="@dimen/passcode_text_size"
+			android:textStyle="bold"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/passcode_1"
-                android:layout_width="70px"
-                android:layout_height="70px"
-                android:background="@android:color/transparent"
-                android:src="@drawable/img_passcode_null"/>
+			<ImageView
+				android:id="@+id/passcode_1"
+				android:layout_width="70px"
+				android:layout_height="70px"
+				android:background="@android:color/transparent"
+				android:src="@drawable/img_passcode_null"/>
 
-            <ImageView
-                android:id="@+id/passcode_2"
-                android:layout_width="70px"
-                android:layout_height="70px"
-                android:layout_marginLeft="10dp"
-                android:background="@android:color/transparent"
-                android:src="@drawable/img_passcode_null"/>
+			<ImageView
+				android:id="@+id/passcode_2"
+				android:layout_width="70px"
+				android:layout_height="70px"
+				android:layout_marginLeft="10dp"
+				android:background="@android:color/transparent"
+				android:src="@drawable/img_passcode_null"/>
 
-            <ImageView
-                android:id="@+id/passcode_3"
-                android:layout_width="70px"
-                android:layout_height="70px"
-                android:layout_marginLeft="10dp"
-                android:background="@android:color/transparent"
-                android:src="@drawable/img_passcode_null"/>
+			<ImageView
+				android:id="@+id/passcode_3"
+				android:layout_width="70px"
+				android:layout_height="70px"
+				android:layout_marginLeft="10dp"
+				android:background="@android:color/transparent"
+				android:src="@drawable/img_passcode_null"/>
 
-            <ImageView
-                android:id="@+id/passcode_4"
-                android:layout_width="70px"
-                android:layout_height="70px"
-                android:layout_marginLeft="10dp"
-                android:background="@android:color/transparent"
-                android:src="@drawable/img_passcode_null"/>
-        </LinearLayout>
-    </LinearLayout>
+			<ImageView
+				android:id="@+id/passcode_4"
+				android:layout_width="70px"
+				android:layout_height="70px"
+				android:layout_marginLeft="10dp"
+				android:background="@android:color/transparent"
+				android:src="@drawable/img_passcode_null"/>
+		</LinearLayout>
+	</LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:gravity="center"
-        android:orientation="vertical">
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:gravity="center"
+		android:orientation="vertical"
+		android:layout_marginTop="20dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="3">
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="0dp"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:orientation="horizontal"
+			android:weightSum="3">
 
-            <Button
-                android:id="@+id/btnPasscode1"
-                android:layout_width="@dimen/passcode_size"
-                android:layout_height="@dimen/passcode_size"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/round_button"
-                android:shadowColor="#A8A8A8"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="5"
-                android:text="1"
-                android:textColor="#fff"
-                android:textSize="@dimen/passcode_text_size"
-                android:textStyle="bold"/>
+			<Button
+				android:id="@+id/btnPasscode1"
+				android:layout_width="@dimen/passcode_size"
+				android:layout_height="@dimen/passcode_size"
+				android:layout_marginRight="10dp"
+				android:background="@drawable/round_button"
+				android:shadowColor="#A8A8A8"
+				android:shadowDx="0"
+				android:shadowDy="0"
+				android:shadowRadius="5"
+				android:text="1"
+				android:textColor="#fff"
+				android:textSize="@dimen/passcode_text_size"
+				android:textStyle="bold"/>
 
-            <Button
-                android:id="@+id/btnPasscode2"
-                android:layout_width="@dimen/passcode_size"
-                android:layout_height="@dimen/passcode_size"
-                android:background="@drawable/round_button"
-                android:shadowColor="#A8A8A8"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="5"
-                android:text="2"
-                android:textColor="#fff"
-                android:textSize="@dimen/passcode_text_size"
-                android:textStyle="bold"/>
+			<Button
+				android:id="@+id/btnPasscode2"
+				android:layout_width="@dimen/passcode_size"
+				android:layout_height="@dimen/passcode_size"
+				android:background="@drawable/round_button"
+				android:shadowColor="#A8A8A8"
+				android:shadowDx="0"
+				android:shadowDy="0"
+				android:shadowRadius="5"
+				android:text="2"
+				android:textColor="#fff"
+				android:textSize="@dimen/passcode_text_size"
+				android:textStyle="bold"/>
 
-            <Button
-                android:id="@+id/btnPasscode3"
-                android:layout_width="@dimen/passcode_size"
-                android:layout_height="@dimen/passcode_size"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/round_button"
-                android:shadowColor="#A8A8A8"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="5"
-                android:text="3"
-                android:textColor="#fff"
-                android:textSize="@dimen/passcode_text_size"
-                android:textStyle="bold"/>
-        </LinearLayout>
+			<Button
+				android:id="@+id/btnPasscode3"
+				android:layout_width="@dimen/passcode_size"
+				android:layout_height="@dimen/passcode_size"
+				android:layout_marginLeft="10dp"
+				android:background="@drawable/round_button"
+				android:shadowColor="#A8A8A8"
+				android:shadowDx="0"
+				android:shadowDy="0"
+				android:shadowRadius="5"
+				android:text="3"
+				android:textColor="#fff"
+				android:textSize="@dimen/passcode_text_size"
+				android:textStyle="bold"/>
+		</LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="3">
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="0dp"
+			android:layout_marginTop="10dp"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:orientation="horizontal"
+			android:weightSum="3">
 
-            <Button
-                android:id="@+id/btnPasscode4"
-                android:layout_width="@dimen/passcode_size"
-                android:layout_height="@dimen/passcode_size"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/round_button"
-                android:shadowColor="#A8A8A8"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="5"
-                android:text="4"
-                android:textColor="#fff"
-                android:textSize="@dimen/passcode_text_size"
-                android:textStyle="bold"/>
+			<Button
+				android:id="@+id/btnPasscode4"
+				android:layout_width="@dimen/passcode_size"
+				android:layout_height="@dimen/passcode_size"
+				android:layout_marginRight="10dp"
+				android:background="@drawable/round_button"
+				android:shadowColor="#A8A8A8"
+				android:shadowDx="0"
+				android:shadowDy="0"
+				android:shadowRadius="5"
+				android:text="4"
+				android:textColor="#fff"
+				android:textSize="@dimen/passcode_text_size"
+				android:textStyle="bold"/>
 
-            <Button
-                android:id="@+id/btnPasscode5"
-                android:layout_width="@dimen/passcode_size"
-                android:layout_height="@dimen/passcode_size"
-                android:background="@drawable/round_button"
-                android:shadowColor="#A8A8A8"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="5"
-                android:text="5"
-                android:textColor="#fff"
-                android:textSize="@dimen/passcode_text_size"
-                android:textStyle="bold"/>
+			<Button
+				android:id="@+id/btnPasscode5"
+				android:layout_width="@dimen/passcode_size"
+				android:layout_height="@dimen/passcode_size"
+				android:background="@drawable/round_button"
+				android:shadowColor="#A8A8A8"
+				android:shadowDx="0"
+				android:shadowDy="0"
+				android:shadowRadius="5"
+				android:text="5"
+				android:textColor="#fff"
+				android:textSize="@dimen/passcode_text_size"
+				android:textStyle="bold"/>
 
-            <Button
-                android:id="@+id/btnPasscode6"
-                android:layout_width="@dimen/passcode_size"
-                android:layout_height="@dimen/passcode_size"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/round_button"
-                android:shadowColor="#A8A8A8"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="5"
-                android:text="6"
-                android:textColor="#fff"
-                android:textSize="@dimen/passcode_text_size"
-                android:textStyle="bold"/>
-        </LinearLayout>
+			<Button
+				android:id="@+id/btnPasscode6"
+				android:layout_width="@dimen/passcode_size"
+				android:layout_height="@dimen/passcode_size"
+				android:layout_marginLeft="10dp"
+				android:background="@drawable/round_button"
+				android:shadowColor="#A8A8A8"
+				android:shadowDx="0"
+				android:shadowDy="0"
+				android:shadowRadius="5"
+				android:text="6"
+				android:textColor="#fff"
+				android:textSize="@dimen/passcode_text_size"
+				android:textStyle="bold"/>
+		</LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="3">
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="0dp"
+			android:layout_marginTop="10dp"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:orientation="horizontal"
+			android:weightSum="3">
 
-            <Button
-                android:id="@+id/btnPasscode7"
-                android:layout_width="@dimen/passcode_size"
-                android:layout_height="@dimen/passcode_size"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/round_button"
-                android:shadowColor="#A8A8A8"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="5"
-                android:text="7"
-                android:textColor="#fff"
-                android:textSize="@dimen/passcode_text_size"
-                android:textStyle="bold"/>
+			<Button
+				android:id="@+id/btnPasscode7"
+				android:layout_width="@dimen/passcode_size"
+				android:layout_height="@dimen/passcode_size"
+				android:layout_marginRight="10dp"
+				android:background="@drawable/round_button"
+				android:shadowColor="#A8A8A8"
+				android:shadowDx="0"
+				android:shadowDy="0"
+				android:shadowRadius="5"
+				android:text="7"
+				android:textColor="#fff"
+				android:textSize="@dimen/passcode_text_size"
+				android:textStyle="bold"/>
 
-            <Button
-                android:id="@+id/btnPasscode8"
-                android:layout_width="@dimen/passcode_size"
-                android:layout_height="@dimen/passcode_size"
-                android:background="@drawable/round_button"
-                android:shadowColor="#A8A8A8"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="5"
-                android:text="8"
-                android:textColor="#fff"
-                android:textSize="@dimen/passcode_text_size"
-                android:textStyle="bold"/>
+			<Button
+				android:id="@+id/btnPasscode8"
+				android:layout_width="@dimen/passcode_size"
+				android:layout_height="@dimen/passcode_size"
+				android:background="@drawable/round_button"
+				android:shadowColor="#A8A8A8"
+				android:shadowDx="0"
+				android:shadowDy="0"
+				android:shadowRadius="5"
+				android:text="8"
+				android:textColor="#fff"
+				android:textSize="@dimen/passcode_text_size"
+				android:textStyle="bold"/>
 
-            <Button
-                android:id="@+id/btnPasscode9"
-                android:layout_width="@dimen/passcode_size"
-                android:layout_height="@dimen/passcode_size"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/round_button"
-                android:shadowColor="#A8A8A8"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="5"
-                android:text="9"
-                android:textColor="#fff"
-                android:textSize="@dimen/passcode_text_size"
-                android:textStyle="bold"/>
-        </LinearLayout>
+			<Button
+				android:id="@+id/btnPasscode9"
+				android:layout_width="@dimen/passcode_size"
+				android:layout_height="@dimen/passcode_size"
+				android:layout_marginLeft="10dp"
+				android:background="@drawable/round_button"
+				android:shadowColor="#A8A8A8"
+				android:shadowDx="0"
+				android:shadowDy="0"
+				android:shadowRadius="5"
+				android:text="9"
+				android:textColor="#fff"
+				android:textSize="@dimen/passcode_text_size"
+				android:textStyle="bold"/>
+		</LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="3">
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="0dp"
+			android:layout_marginTop="10dp"
+			android:layout_weight="1"
+			android:gravity="center"
+			android:orientation="horizontal"
+			android:weightSum="3">
 
-            <Button
-                android:id="@+id/btnPasscode0"
-                android:layout_width="@dimen/passcode_size"
-                android:layout_height="@dimen/passcode_size"
-                android:background="@drawable/round_button"
-                android:shadowColor="#A8A8A8"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="5"
-                android:text="0"
-                android:textColor="#fff"
-                android:textSize="@dimen/passcode_text_size"
-                android:textStyle="bold"/>
-        </LinearLayout>
-    </LinearLayout>
+			<Button
+				android:id="@+id/btnPasscode0"
+				android:layout_width="@dimen/passcode_size"
+				android:layout_height="@dimen/passcode_size"
+				android:background="@drawable/round_button"
+				android:shadowColor="#A8A8A8"
+				android:shadowDx="0"
+				android:shadowDy="0"
+				android:shadowRadius="5"
+				android:text="0"
+				android:textColor="#fff"
+				android:textSize="@dimen/passcode_text_size"
+				android:textStyle="bold"/>
+		</LinearLayout>
+	</LinearLayout>
 
-    <Button
-        android:id="@+id/btnDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@android:color/transparent"
-        android:gravity="center"
-        android:paddingRight="20dp"
-        android:text="@string/button_delete"
-        android:textColor="@android:color/white"
-        android:textSize="@dimen/passcode_text_size"
-        android:textStyle="bold"/>
+	<Button
+		android:id="@+id/btnDelete"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:background="@android:color/transparent"
+		android:gravity="center"
+		android:padding="10dp"
+		android:text="@string/button_delete"
+		android:textColor="@android:color/white"
+		android:textSize="@dimen/passcode_text_size"
+		android:textStyle="bold"/>
 
 </LinearLayout>
