--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_list_transaction.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_list_transaction.xml
@@ -24,6 +24,7 @@
                 android:cacheColorHint="@android:color/transparent"
                 android:divider="@color/listview_divider"
                 android:dividerHeight="0.1dp"
+				android:layout_marginTop="10dp"
                 android:scrollbars="none"/>
 
             <TextView
