--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_list_account.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_list_account.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
+		android:layout_marginTop="10dp"
         android:text="@string/ListView_Account_Empty"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 </FrameLayout>
