--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_list_budget.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_list_budget.xml
@@ -12,7 +12,7 @@
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
         android:cacheColorHint="@android:color/transparent"
         android:divider="@android:color/transparent"
         android:dividerHeight="10dp"
